@@ -170,6 +170,13 @@ Set BMC URL.
 \fB\-\-set\-base\-os\-hypervisor\-url\fR=\fISTRING\fR
 Set Base OS/Hypervisor URL.
 .TP
+\fB\-\-read\-fru\fR=\fIFILENAME\fR
+Read the contents of a FRU device ID and store it in the specified
+file.  Requires setting of a device ID via \fI\-\-device\-id\.
+.TP
+\fB\-\-device\-id\fR=\fIIDNUM\fR
+Specify a specific FRU device ID.  For use with \fI\-\-read\-fru\fR.
+.TP
 \fB\-\-verbose\fR
 Increase verbosity in output.
 #include <@top_srcdir@/man/manpage-common-sdr-cache-options-heading.man>
