@@ -1,3 +1,7 @@
+2016-05-10 Albert Chu <chu11@llnl.gov>
+
+	* bmc-device/: Support --read-fru and --device-id option.
+
 2016-05-20 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/spec/enterprise-numbers.pl: Handle header and all
@@ -14,6 +18,7 @@
 	* libfreeipmi/spec/ipmi-iana-enterprise-numbers-spec.c: Update to
 	newest.
 	
+
 2016-05-06 Albert Chu <chu11@llnl.gov>
 
 	* ipmi-fru/: Rename INTERPRET_OEM_DATA to INTERPRET_OEM_DATA_KEY
